--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.0",
+    "@react-three/cannon": "^4.1.0",
+    "@react-three/drei": "^7.22.6",
+    "@react-three/fiber": "^7.0.19",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "file-saver": "^2.0.5",
+    "nanoid": "^3.1.30",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.5.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "three": "^0.126.1",
+    "three": "^0.134.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
